Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
13.0
-
Unexpected results
-
Q2/2026 Server Maintenance
Description
Problem :
mariadb-dump (13.0 client) --dump-slave omits CHANGE MASTER statement when connected to older server, tested on 10.6 server.
How to reproduce
When using a newer mariadb-dump client (13.0) to back up an old MariaDB server (10.6.24) with the --dump-slave option, the resulting dump file contains partial replication output.
Output is missing CHANGE MASTER command , as seen below.
/test/13.0/debug_37146$ ./client/mariadb-dump -hlocalhost -uroot test -S/test/10.6.24-20/debug/mysql-test/var/tmp/mysqld.2.sock --dump-slave |
/*M!999999\- enable the sandbox mode */ |
-- MariaDB dump 10.19-13.0.0-MariaDB, for Linux (x86_64)
|
--
|
-- Host: localhost Database: test
|
-- ------------------------------------------------------
|
-- Server version 10.6.24-20-MariaDB-debug-log
|
|
|
/*!40101 SET @OLD_CHARACTER_SET_CLIENT=@@CHARACTER_SET_CLIENT */; |
/*!40101 SET @OLD_CHARACTER_SET_RESULTS=@@CHARACTER_SET_RESULTS */; |
/*!40101 SET @OLD_COLLATION_CONNECTION=@@COLLATION_CONNECTION */; |
/*!40101 SET NAMES utf8mb4 */; |
/*!40103 SET @OLD_TIME_ZONE=@@TIME_ZONE */; |
/*!40103 SET TIME_ZONE='+00:00' */; |
/*!40014 SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0 */; |
/*!40014 SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0 */; |
/*!40101 SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='NO_AUTO_VALUE_ON_ZERO' */; |
/*M!100616 SET @OLD_NOTE_VERBOSITY=@@NOTE_VERBOSITY, NOTE_VERBOSITY=0 */; |
|
|
-- The following is the replication SQL position taken from SHOW SLAVE STATUS at the time of backup.
|
-- Use this position when creating a clone or replacement server from where the backup was taken.
|
-- This new server will connects to the same primary server(s).
|
--
|
-- The replica GTID position corresponding to the below CHANGE-MASTER settings is printed later in the file.
|
|
|
|
|
-- The deferred gtid setting for slave corresponding to the dump-slave CHANGE-MASTER follows
|
-- GTID position to start replication:
|
-- SET GLOBAL gtid_slave_pos='0-1-46122';
|
/*!40103 SET TIME_ZONE=@OLD_TIME_ZONE */; |
|
|
/*!40101 SET SQL_MODE=@OLD_SQL_MODE */; |
/*!40014 SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS */; |
/*!40014 SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS */; |
/*!40101 SET CHARACTER_SET_CLIENT=@OLD_CHARACTER_SET_CLIENT */; |
/*!40101 SET CHARACTER_SET_RESULTS=@OLD_CHARACTER_SET_RESULTS */; |
/*!40101 SET COLLATION_CONNECTION=@OLD_COLLATION_CONNECTION */; |
/*M!100616 SET NOTE_VERBOSITY=@OLD_NOTE_VERBOSITY */; |
|
|
-- Dump completed on 2026-03-27 10:41:34
|
|
Confirmed that 10.6 mariadb-dump prints CHANGE MASTER statement in the output for the same server.
/test/10.6.24-20/debug$ ./client/mariadb-dump -hlocalhost -uroot test -S/test/10.6.24-20/debug/mysql-test/var/tmp/mysqld.2.sock --dump-slave |
/*M!999999\- enable the sandbox mode */ |
-- MariaDB dump 10.19 Distrib 10.6.24-20-MariaDB, for Linux (x86_64)
|
--
|
-- Host: localhost Database: test
|
-- ------------------------------------------------------
|
-- Server version 10.6.24-20-MariaDB-debug-log
|
|
|
/*!40101 SET @OLD_CHARACTER_SET_CLIENT=@@CHARACTER_SET_CLIENT */; |
/*!40101 SET @OLD_CHARACTER_SET_RESULTS=@@CHARACTER_SET_RESULTS */; |
/*!40101 SET @OLD_COLLATION_CONNECTION=@@COLLATION_CONNECTION */; |
/*!40101 SET NAMES utf8mb4 */; |
/*!40103 SET @OLD_TIME_ZONE=@@TIME_ZONE */; |
/*!40103 SET TIME_ZONE='+00:00' */; |
/*!40014 SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0 */; |
/*!40014 SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0 */; |
/*!40101 SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='NO_AUTO_VALUE_ON_ZERO' */; |
/*!40111 SET @OLD_SQL_NOTES=@@SQL_NOTES, SQL_NOTES=0 */; |
|
|
--
|
-- The following is the SQL position of the replication taken from SHOW SLAVE STATUS at the time of backup.
|
-- Use this position when creating a clone of, or replacement server, from where the backup was taken.
|
-- This new server will connects to the same primary server(s).
|
--
|
|
|
-- A corresponding to the below dump-slave CHANGE-MASTER settings to the slave gtid state is printed later in the file.
|
*CHANGE MASTER '' TO MASTER_LOG_FILE='master.000003', MASTER_LOG_POS=3104; |
*
|
|
|
-- The deferred gtid setting for slave corresponding to the dump-slave CHANGE-MASTER follows
|
-- GTID position to start replication:
|
-- SET GLOBAL gtid_slave_pos='0-1-46122';
|
/*!40103 SET TIME_ZONE=@OLD_TIME_ZONE */; |
|
|
/*!40101 SET SQL_MODE=@OLD_SQL_MODE */; |
/*!40014 SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS */; |
/*!40014 SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS */; |
/*!40101 SET CHARACTER_SET_CLIENT=@OLD_CHARACTER_SET_CLIENT */; |
/*!40101 SET CHARACTER_SET_RESULTS=@OLD_CHARACTER_SET_RESULTS */; |
/*!40101 SET COLLATION_CONNECTION=@OLD_COLLATION_CONNECTION */; |
/*!40111 SET SQL_NOTES=@OLD_SQL_NOTES */; |
|
|
-- Dump completed on 2026-03-27 10:41:46
|
|
Attachments
Issue Links
- is caused by
-
MDEV-37146 mariadb-dump: Replace SHOW SLAVE STATUS usage with information_schema.SLAVE_STATUS
-
- Closed
-